# Echo_os

./: .gdb_history  .gitignore  1.md  Cargo.toml  Makefile  direct_build.sh  fix_imports.sh  populate_fs_image.sh  process_log.py  rust-analyzer.toml  stack2.txt
component/UintAllocator/: Cargo.toml
component/UintAllocator/src/: lib.rs
component/arch/: Cargo.toml
component/arch/src/: lib.rs  loongarch64.rs  riscv64.rs
component/bitmap/: Cargo.toml
component/bitmap/src/: lib.rs
component/boot/: Cargo.toml
component/boot/src/: lib.rs  macro_def.rs  riscv64.rs
component/config/: Cargo.toml
component/config/src/: lib.rs  riscv64_qemu.rs
component/console/: Cargo.toml
component/console/src/: lib.rs  riscv64.rs
component/driver/api/: Cargo.toml
component/driver/api/src/: lib.rs
component/driver/device/: Cargo.toml
component/driver/device/src/: define.rs  device_set.rs  lib.rs
component/driver/virtio/: Cargo.toml
component/driver/virtio/src/: blk.rs  halimpl.rs  lib.rs
component/elf_ext/: Cargo.toml
component/elf_ext/src/: lib.rs
component/executor/: Cargo.toml
component/executor/src/: executor.rs  id.rs  kernel_task.rs  lib.rs  select.rs  task_def.rs  waker.rs
component/executor/src/ops/: mod.rs
component/filesystem/: Cargo.toml
component/filesystem/src/: devfs.rs  fd_table.rs  file.rs  io.rs  lib.rs  mount.rs  path.rs  pipe.rs  vfs.rs
component/filesystem/src/devfs/: devfs.rs  mod.rs  null.rs  uart.rs  vda.rs  zero.rs
component/filesystem/src/plug/: lwext4.rs  mod.rs
component/filesystem/src/procfs/: meminfo.rs  mod.rs  procfs.rs  self_dir.rs  stat.rs
component/frame/: Cargo.toml
component/frame/src/: lib.rs
component/heap/: Cargo.toml
component/heap/src/: lib.rs
component/mem/: Cargo.toml
component/mem/src/: PagHal.rs  lib.rs  maptrace.rs  memregion.rs  memset.rs  pag_hal.rs  stack.rs
component/mem/src/pagetable/: loongarch64.rs  mod.rs  riscv64.rs
component/proc/: Cargo.toml
component/proc/src/: id.rs  lib.rs  process.rs
component/struct_define/: Cargo.toml
component/struct_define/src/: aux.rs  cpu_set.rs  iov.rs  itimerval.rs  lib.rs  poll_event.rs  rlimit.rs  statfs.rs  termios.rs  timespec.rs  timeval.rs  tms.rs  uname.rs
component/task/: Cargo.toml
component/task/src/: cache.rs  error.rs  lib.rs  usertask.rs
component/timer/: Cargo.toml
component/timer/src/: lib.rs  riscv64.rs
component/trap/: Cargo.toml
component/trap/src/: lib.rs
component/trap/src/trap/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
component/trap/src/trap/loongarch64/: unaligned.rs
component/trap/src/trapframe/: loongarch64.rs  mod.rs  riscv64.rs  x86_64.rs
kernel/: Cargo.toml  build.rs
kernel/src/: backtrace.rs  main.rs
kernel/src/executor/: error.rs  executor.rs  id_alloc.rs  initproc.rs  mod.rs  ops.rs  sync.rs  task.rs  thread.rs
kernel/src/signal/: flages.rs  list.rs  mod.rs
kernel/src/user_handler/: entry.rs  handler.rs  mod.rs  userbuf.rs
kernel/src/user_handler/syscall/: fs.rs  mem.rs  mod.rs  other.rs  proc.rs  signal.rs  sysnum.rs
test/: hello.c  hello_elf  test  test.c  world.c  world_elf
test/open/: open01  open03  open04  open09  open10  open12_child
test_tmp/: basic_testcode.sh
test_tmp/chdir/: chdir01  chdir04
test_tmp/clone/: clone01  clone02  clone03  clone04  clone05  clone06  clone07  clone08  clone09
test_tmp/close/: close01  close02
test_tmp/open/: open02  open06  open07  open08  open11  open12  open13  open14  open15
test_tmp/read/: read01  read02  read03  read04
test_tmp/realpath/: realpath01
test_tmp/sigaction/: sigaction01  sigaction02
