[package]
name = "kernel"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "kernel"
test = false

[dependencies]
boot = { workspace = true }
console = { workspace = true }
flat_device_tree = { workspace = true }
virtio = { workspace = true }
heap = { workspace = true }
log = { workspace = true }
memory_addr = { workspace = true }
virtio-drivers  = { workspace = true }
frame = { workspace = true }
device = { workspace = true }
filesystem = { workspace = true }
arch = { workspace = true }
elf_ext = { workspace = true }
trap = { workspace = true }
mem = { workspace = true }
spin = { workspace = true }
lazy_static = { workspace = true }
uint_allocator = { workspace = true }
xmas-elf = { workspace = true }
config = { workspace = true }
page_table_multiarch = { workspace = true }

