[package]
name = "boot"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
page_table_multiarch = { workspace = true }
bitflags = { workspace = true}
console = { workspace = true }
[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.13.0"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
