[package]
name = "elf_ext"
version = "0.1.0"
edition = "2024"

[dependencies]
xmas-elf = { workspace = true }
frame = { workspace = true }
filesystem = { workspace = true }
config = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
mem = { workspace = true }
memory_addr = "0.3.2"
page_table_multiarch = "0.5.3"
