[package]
name = "elf_ext"
version = "0.1.0"
edition = "2024"

[dependencies]
xmas-elf = { workspace = true }
frame = { workspace = true }
filesystem = { workspace = true }
config = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
mem = { workspace = true }
memory_addr = { workspace = true }
page_table_multiarch = { workspace = true }

