[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
uint_allocator = { workspace = true }
lazy_static = { workspace = true }
spin = { workspace = true }
hashbrown =  { workspace = true }
downcast-rs = { workspace = true }
log = { workspace = true }
arch = { workspace = true }