[package]
name = "heap"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[dependencies]
buddy_system_allocator = "0.9"
config = { workspace = true }
console = { workspace = true }
log = { workspace = true }
memory_addr = { workspace = true }
mem = { workspace = true }
page_table_multiarch = { workspace = true }