[package]
name = "mem"
version = "0.1.0"
edition = "2024"

[lib]
test = false
bench = false

[dependencies]
riscv = "0.13.0"
page_table_multiarch = { workspace = true }
page_table_entry = { workspace = true }
memory_addr = { workspace = true }
log = { workspace = true }
config = { workspace = true }
cfg-if = { workspace = true }
frame = { workspace = true }
arch = { workspace = true }
lazy_static = { workspace = true }
console = { path = "../console" }
device = { workspace = true }