[package]
name = "task"
version = "0.1.0"
edition = "2024"

[dependencies]
executor = { workspace = true }
mem = { workspace = true }
filesystem = { workspace = true }
trap = { workspace = true }
spin = { workspace = true }
lazy_static = { workspace = true, features = ["spin_no_std"] }
elf_ext = { workspace = true }
log = { workspace = true }
