[package]
name = "virtio"
version = "0.1.0"
edition = "2024"

[dependencies]
frame = { workspace = true }
virtio-drivers = { workspace = true }
spin = { workspace = true }
alloc = { package = "rustc-std-workspace-alloc", version = "1.0.0", optional = true }
core = { package = "rustc-std-workspace-core", version = "1.0.0", optional = true }
memory_addr = { workspace = true }
config = { workspace = true }
log = { workspace = true }
device = { workspace = true }
UintAllocator = { workspace = true }
lazy_static = { workspace = true }
